kube/fabric-rest-sample.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-rest-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-rest-sample
  template:
    metadata:
      labels:
        app: fabric-rest-sample
    spec:
      containers:
        - name: main
          image: localhost:5000/my-gateway-app
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 3000
        - name: redis
          image: redis:6.2.5
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: fabric-rest-sample
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: fabric-rest-sample


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fabric-rest-sample
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
#          - path: "/fabric-rest-sample/(.*)"
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: fabric-rest-sample
                port:
                  number: 3000
